--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.1.2-5'
-    ext.spring_boot_version = '1.5.3.RELEASE'
+    ext.kotlin_version = '1.2.20'
+    ext.spring_boot_version = '2.0.1.RELEASE'
     repositories {
         jcenter()
     }
@@ -21,22 +21,39 @@ jar {
     version = '1.0'
 }
 
+mainClassName = 'com.playground.timereport.TimeReportApplication'
+
 repositories {
     jcenter()
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'org.springframework.boot:spring-boot-starter'
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.boot:spring-boot-starter-actuator'
-    compile('org.springframework.boot:spring-boot-starter-thymeleaf') {
+    compile 'org.springframework.boot:spring-boot-starter:2.0.1.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:2.0.1.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-actuator:2.0.1.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.1.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-security:2.0.1.RELEASE'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:2.0.1.RELEASE'
+    compile  'io.jsonwebtoken:jjwt:0.9.0'
+    
+    compile group: 'com.graphql-java', name: 'graphql-java', version:'10.0'
+    compile group: 'com.graphql-java', name: 'graphiql-spring-boot-starter', version:'4.0.0'
+    compile group: 'com.graphql-java', name: 'graphql-java-tools', version:'5.2.4'
+    compile group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version:'4.0.0'
+    compile group: 'com.graphql-java', name: 'graphql-java-servlet', version:'5.0.0'
+    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.2'
+    compile(group: 'org.hibernate', name: 'hibernate-core', version:'5.2.9.Final') {
+	exclude(module: 'xml-apis')
+    }
+
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf:2.0.1.RELEASE') {
         exclude group: 'nz.net.ultraq.thymeleaf', module: 'thymeleaf-layout-dialect'
     }
 
     compile 'org.postgresql:postgresql:9.4.1212'
     compile 'com.zaxxer:HikariCP:2.6.0'
-    compile 'org.webjars:webjars-locator'
+    compile 'org.webjars:webjars-locator:0.34'
     compile 'org.webjars:jquery:2.2.4'
     compile 'org.webjars:jquery-ui:1.11.4'
     compile 'org.webjars:bootstrap:3.3.6'
