--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,12 @@ spring:
   profiles:
       active: production
   datasource:
-    platform: h2
-    type: com.zaxxer.hikari.HikariDataSource
-    url: ${JDBC_DATABASE_URL:}
-    driverClassName: org.postgresql.Driver
+      platform: h2
+      type: com.zaxxer.hikari.HikariDataSource
+      url: ${JDBC_DATABASE_URL}
+      username: ${JDBC_DATABASE_USERNAME}
+      password: ${JDBC_DATABASE_PASSWORD}
+      driverClassName: org.postgresql.Driver
   hikari:
     connection-timeout: 30000
     maximum-pool-size: 10
