--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'kotlin'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'application'
 apply plugin: "kotlin-spring"
-apply plugin: "kotlin-noarg"
+apply plugin: "kotlin-jpa"
 
 jar {
     baseName = 'kotlin-getting-started'
