--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     testCompile 'org.springframework.boot:spring-boot-starter-test:2.0.1.RELEASE'
     compile  'io.jsonwebtoken:jjwt:0.9.0'
     compile 'javax.servlet:javax.servlet-api:4.0.1'
+    compile 'com.h2database:h2:1.3.148'
 
     compile group: 'com.graphql-java', name: 'graphql-java', version:'10.0'
     compile group: 'com.graphql-java', name: 'graphiql-spring-boot-starter', version:'4.0.0'
