--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,35 @@
 graphql:
   servlet:
-    mapping: /graphql
+    mapping: /app/graphql
     enabled:  true
     corsEnabled: true
 
+logging:
+  level:
+    org.springframework: INFO
+
+server:
+  port: ${PORT:5000}
+
+---
+
 spring:
-  profiles:
-      active: production
+  datasource:
+    platform: h2
+    type: com.zaxxer.hikari.HikariDataSource
+    url: 'jdbc:h2:file:~/test-h2-db'
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+
+---
+spring:
+  profiles: production
   datasource:
       platform: h2
       type: com.zaxxer.hikari.HikariDataSource
@@ -26,22 +49,7 @@ spring:
           jdbc:
             lob:
               non_contextual_creation: true
-  thymeleaf:
-      check-template-location: false
-      prefix: classpath:templates/
-      suffix: .html
-      mode: HTML5
-      encoding: UTF-8
-      content-type: text/html
-      cache: false
-
-logging:
-  level:
-    org.springframework: INFO
-
-server:
-  port: ${PORT:5000}
 
 authentication:
   jwt:
-    secret: ${JWT_APP_SECRET}
+    secret: ${JWT_APP_SECRET:secretDefaultDev3346G}
