--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   datasource:
     platform: h2
     type: com.zaxxer.hikari.HikariDataSource
-    url: 'jdbc:h2:file:~/test-h2-db'
+    url: 'jdbc:h2:file:~/test_h2_db'
     driverClassName: org.h2.Driver
     username: sa
     password:
